<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"

                    android:text="@string/details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"

                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/number"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/pax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/pax"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/smoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoking" />

            <TextView
                android:id="@+id/textViewDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:text="@string/day" />

            <EditText
                android:id="@+id/editTextDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Click here to select day"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:text="@string/time" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Click here to select time"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/reserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserve" />

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>